[package]
name = "rodio-fuzz"
version = "0.0.0"
publish = false
edition = "2018"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.rodio]
path = ".."
features = ["symphonia-aac", "symphonia-isomp4"]

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "decode"
path = "fuzz_targets/decode.rs"
test = false
doc = false

[profile.release]
debug = true
